# bon

./: Dockerfile  LICENSE  README.md  bon_docker  bon_docker.bat  build.sh  clean.sh
benchmarks/: README.md  fib.bon  fib.cc  fib.py  nbody.bon  nbody.cc  nbody.py  sort.bon  sort.cc  sort.py
docs/: ch00-01-contents.md  ch01-01-installation.md  ch01-02-hello-world.md  ch01-03-quick-tour.md  ch02-01-memory.md
examples/: assoc.bon  equality.bon  fib.bon  files.bon  generics.bon  hello_main.bon  languages.bon  lists.bon  loop.bon  memory.bon  multiple_dispatch.bon  num.bon  sort.bon  sorting.bon  test.csv  tuples.bon  typeclass.bon  vectors.bon
src/: CMakeLists.txt  auto_scope.h  bon.cc  bonAST.cc  bonAST.h  bonCodeGenPass.cc  bonCodeGenPass.h  bonCompilerPass.h  bonDebugASTPass.cc  bonDebugASTPass.h  bonJIT.h  bonLLVM.h  bonLogger.cc  bonLogger.h  bonModuleState.cc  bonModuleState.h  bonParser.cc  bonParser.h  bonScopeAnalysisPass.cc  bonScopeAnalysisPass.h  bonStdLib.cc  bonTokenizer.cc  bonTokenizer.h  bonTypeAnalysisPass.cc  bonTypeAnalysisPass.h  bonTypesystem.cc  bonTypesystem.h  term_colors.h  utils.cc  utils.h
stdlib/: bool.bon  env.bon  file.bon  list.bon  math.bon  option.bon  prelude.bon  print.bon  random.bon  sort.bon  string.bon  time.bon  vector.bon
